tdf#118835 fix missing attribute name conversion.

LineColor and LineStyle are missing from the switch-case.
Just reuse the conversion list from
oox::ppt::getAttributeConversionList(), also reoder the
list so that fillcolor is prior than fillColor.

Change-Id: Ia78553ad2fc908923da56bc58baf96dbb7d40863